--- a/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
@@ -3,14 +3,12 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="UTF-8">
-<title>사내 공통 문서 양식</title>
-<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
-	type="text/css">
-<link
-	href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-	rel="stylesheet">
-<link href="css/sb-admin-2.min.css" rel="stylesheet">
+<!--summernote  css-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-bs4.min.css" rel="stylesheet">
+
+<!--summernote  css-->
+
 </head>
 <body>
 	<th:block layout:fragment="content">
@@ -20,24 +18,24 @@
 			<div class="card shadow mb-4">
 				<div class="card-body">
 					<div class="mt-4" id="formContainer"></div>
-					<form method="post" th:action="@{/notice/save}" th:object="${noticeDTO}">
+					<form method="post" th:action="@{/document/save}" th:object="${documentDTO}">
 						<div class="form-group">
-							<label for="templateSelector">문서 종류 선택</label>
-							<select class="form-control" id="templateSelector">
-								<option value="">-- 양식을 선택하세요 --</option>
-								<option value="report">보고서</option>
-								<option value="contract">계약서</option>
-								<option value="proposal">품의서</option>
-								<option value="memo">사내 메모</option>
+							<label for="templateSelector2">문서 종류 선택</label>
+							<select class="form-control" >
+								<option th:each="detail : ${dtCodes}"
+												th:value="${detail.comDtId}"
+												th:text="${detail.comDtNm}"
+												>
+										</option>
 							</select>
 						</div>
 						<div class="form-group">
-							<label for="notTitle">제목</label>
-							<!-- <input type="text" th:field="*{notTitle}" id="notTitle" class="form-control" /> -->
+							<label for="docTitle">제목</label>
+							<input type="text" th:field="*{docTitle}" id="docTitle" class="form-control" />
 						</div>
 						<div class="form-group">
-							<label for="notContent">내용</label>
-							<textarea th:field="*{notContent}" id="notContent"class="form-control"></textarea>
+							<label for="summernote">내용</label>
+							<textarea th:field="*{docContent}" id="summernote" class="form-control"></textarea>
 						</div>
 						<button type="submit" class="btn btn-primary">등록</button>
 					</form>
@@ -46,7 +44,24 @@
 		</div>
 	</th:block>
 
+<th:block layout:fragment="script">
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 	<script>
+		$('#summernote').summernote({
+			tabsize: 2,
+			height: 200,
+			focus: true,
+			toolbar: [
+				['style', ['style']],
+				['font', ['bold', 'underline', 'clear']],
+				['color', ['color']],
+				['para', ['ul', 'ol', 'paragraph']],
+				['table', ['table']],
+				['insert', ['link', 'picture']],
+				['view', ['fullscreen', 'codeview', 'help']]
+			]
+		});
+	
 		// 각 양식 종류에 맞는 HTML 폼 템플릿을 정의
 		const formTemplates = {
 			report: `
@@ -92,7 +107,7 @@
 			memo: `<p>사내 메모 양식 폼이 여기에 들어갑니다.</p>`
 		};
 
-		const selector = document.getElementById('templateSelector');
+		/* const selector = document.getElementById('templateSelector');
 		const formContainer = document.getElementById('formContainer');
 
 		selector.addEventListener('change', (event) => {
@@ -104,7 +119,8 @@
 			} else {
 				formContainer.innerHTML = "";
 			}
-		});
+		}); */
 	</script>
+</th:block>
 </body>
 </html>
