--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -12,7 +12,7 @@
 	rel="stylesheet">
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
-<body th:data-current-emp-id="${currentEmpId}" th:data-emp-dept-id="${empDeptId}" th:data-emp-dept-name="${empDeptName}">
+<body th:data-current-emp-name="${currentEmpName}" th:data-current-emp-id="${currentEmpId}" th:data-emp-dept-id="${empDeptId}" th:data-emp-dept-name="${empDeptName}">
 	<th:block layout:fragment="content">
 		<div class="container-fluid">
 			<div class="row">
