인사 등록 및 수정 페이지 js 분리(25-08-28)

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -177,6 +177,7 @@
 </th:block>
 
 <th:block layout:fragment="script">
-</th:block>
+<script th:src="@{/personnel/js/personnel_regist.js}"></script>
+</th:block> 	
 </body>
 </html>
