--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -33,7 +33,7 @@
 
 	<!--  공통 푸터 -->
 	<footer th:insert="~{fragments/footer}"></footer>
-
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script th:src="@{/bootstrap/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{/bootstrap/vendor/jquery-easing/jquery.easing.min.js}"></script>
