안쓰는 페이지 삭제

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -69,9 +69,8 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">인사관리 메뉴:</h6>
 						<a class="collapse-item" th:href="@{/personnel/current}">인사현황</a>
-						<a class="collapse-item" th:href="@{/personnel/regist}">인사등록</a> <a
-							class="collapse-item" th:href="@{/personnel/app}">인사발령</a> <a
-							class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>
+						<a class="collapse-item" th:href="@{/personnel/regist}">인사등록</a> 
+						<a class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>
 					</div>
 				</div></li>
 
