--- a/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
@@ -18,15 +18,16 @@
 			<div class="card shadow mb-4">
 				<div class="card-body">
 					<div class="mt-4" id="formContainer"></div>
-					<form method="post" th:action="@{/document/save}" th:object="${documentDTO}">
+					<form method="post" th:action="@{/groupware/save}" th:object="${documentDTO}">
 						<div class="form-group">
 							<label for="templateSelector2">문서 종류 선택</label>
 							<select class="form-control" >
-								<option th:each="detail : ${dtCodes}"
-												th:value="${detail.comDtId}"
-												th:text="${detail.comDtNm}"
-												>
-										</option>
+								<option 
+										th:each="detail : ${dtCodes}"
+										th:value="${detail.comDtId}"
+										th:text="${detail.comDtNm}"
+										>
+								</option>
 							</select>
 						</div>
 						<div class="form-group">
