--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -63,7 +63,7 @@
 									<tr>
 										<!-- 성별 -->
 										<th scope="row" class="custom-th">
-											<label for="emp_bd" class="form-label">패스워드</label></th>
+											<label for="emp_bd" class="form-label">새 비밀번호</label></th>		<!-- 새로운 패스워드로 변경  -->
 										<td colspan="3" class="custom-td">
 											<input type="text" class="form-control w-75" id="emp_bd" name="passwd" placeholder="패스워드 입력"></td>
 										<!-- 이메일 -->
